Add elm, remove everything else.

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
-    <title> todo </title>
   </head>
   <body>
+    <div id="app">
+
+    </div>
+  </body>
+</html>
+<!-- <!DOCTYPE html>
+<html lang="en">
+
     <div class="background"></div>
     <div class="notebook">
       <div class="notebook__top-margin"></div>
@@ -15,37 +22,52 @@
       <p class="notebook__heading">
         to do :
       </p>
-      <div class="notebook__ruler">
-        <div class="todo">
+      <ul class="notebook__ruler">
+        <li class="todo">
           <input type="checkbox"></input>
-          <textarea rows="1">Comer un alfajor</textarea>
-        </div>
+          <textarea rows="4">pick a ticket to work on</textarea>
+        </li>
 
-        <div class="todo">
+        <li class="todo">
           <input type="checkbox"></input>
-          <textarea rows="1">Comer otro alfajor</textarea>
-        </div>
+          <textarea rows="1">work on it</textarea>
+        </li>
 
-        <div class="todo">
+        <li class="todo">
           <input type="checkbox"></input>
-          <textarea rows="1">Hacer duolingo</textarea>
-        </div>
+          <textarea rows="1">create a pull request</textarea>
+        </li>
 
-        <div class="todo">
+        <li class="todo">
           <input type="checkbox"></input>
-          <textarea rows="1">Comer oooootro alfajor</textarea>
-        </div>
+          <textarea rows="1">do some QA</textarea>
+        </li>
 
-        <div class="todo">
+        <li class="todo">
           <input type="checkbox"></input>
-          <textarea rows="1">Dormir</textarea>
-        </div>
+          <textarea rows="1">move ticket to ready for review</textarea>
+        </li>
 
-        <div class="todo">
+        <li class="todo">
           <input type="checkbox"></input>
-          <textarea rows="1"></textarea>
-        </div>
-      </div>
+          <textarea rows="1">address any comments</textarea>
+        </li>
+
+        <li class="todo">
+          <input type="checkbox"></input>
+          <textarea rows="1">move ticket to product review</textarea>
+        </li>
+
+        <li class="todo">
+          <input type="checkbox"></input>
+          <textarea rows="1">wait for product approval</textarea>
+        </li>
+
+        <li class="todo">
+          <input type="checkbox"></input>
+          <textarea rows="1">ship it!</textarea>
+        </li>
+      </ul>
     </div>
   </body>
-</htlm>
+</htlm> -->
