Add everything else but now on elm.

--- a/src/index.html
+++ b/src/index.html
@@ -5,69 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
   </head>
   <body>
     <div id="app">
-
     </div>
   </body>
 </html>
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-    <div class="background"></div>
-    <div class="notebook">
-      <div class="notebook__top-margin"></div>
-      <div class="notebook__left-margin"></div>
-      <p class="notebook__heading">
-        to do :
-      </p>
-      <ul class="notebook__ruler">
-        <li class="todo">
-          <input type="checkbox"></input>
-          <textarea rows="4">pick a ticket to work on</textarea>
-        </li>
-
-        <li class="todo">
-          <input type="checkbox"></input>
-          <textarea rows="1">work on it</textarea>
-        </li>
-
-        <li class="todo">
-          <input type="checkbox"></input>
-          <textarea rows="1">create a pull request</textarea>
-        </li>
-
-        <li class="todo">
-          <input type="checkbox"></input>
-          <textarea rows="1">do some QA</textarea>
-        </li>
-
-        <li class="todo">
-          <input type="checkbox"></input>
-          <textarea rows="1">move ticket to ready for review</textarea>
-        </li>
-
-        <li class="todo">
-          <input type="checkbox"></input>
-          <textarea rows="1">address any comments</textarea>
-        </li>
-
-        <li class="todo">
-          <input type="checkbox"></input>
-          <textarea rows="1">move ticket to product review</textarea>
-        </li>
-
-        <li class="todo">
-          <input type="checkbox"></input>
-          <textarea rows="1">wait for product approval</textarea>
-        </li>
-
-        <li class="todo">
-          <input type="checkbox"></input>
-          <textarea rows="1">ship it!</textarea>
-        </li>
-      </ul>
-    </div>
-  </body>
-</htlm> -->
